--- a/Aida64Mobile/Aida64Mobile/Aida64Mobile.csproj
+++ b/Aida64Mobile/Aida64Mobile/Aida64Mobile.csproj
@@ -16,6 +16,7 @@
     <None Remove="Media\graphbackground.png" />
     <None Remove="Media\hd.png" />
     <None Remove="Media\net.png" />
+    <None Remove="Media\temp.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -32,6 +33,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
     <EmbeddedResource Include="Media\net.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Media\temp.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
   </ItemGroup>
