--- a/Aida64Mobile/Aida64Mobile.Android/Aida64Mobile.Android.csproj
+++ b/Aida64Mobile/Aida64Mobile.Android/Aida64Mobile.Android.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\SignalRService.cs" />
+    <Compile Include="TouchEffect.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
