--- a/Aida64Mobile/Aida64Mobile.Android/Aida64Mobile.Android.csproj
+++ b/Aida64Mobile/Aida64Mobile.Android/Aida64Mobile.Android.csproj
@@ -67,11 +67,21 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp">
+      <Version>4.2.0</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Analyzers">
       <Version>6.0.7</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2196" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
+    <PackageReference Include="StyleCop.Analyzers">
+      <Version>1.1.118</Version>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Xamarin.Essentials">
+      <Version>1.7.3</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2515" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ChargingActivity.cs" />
@@ -106,6 +116,10 @@
     <Folder Include="Resources\drawable\" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\AidaCommon\Aida64Common.csproj">
+      <Project>{7bc762bd-fb50-4de2-bef2-348af5eb8df1}</Project>
+      <Name>Aida64Common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Aida64Mobile\Aida64Mobile.csproj">
       <Project>{0CA513A1-6EFA-4F39-A015-829246D738B7}</Project>
       <Name>Aida64Mobile</Name>
