--- a/Aida64Display/Aida64Display/Aida64Display.csproj
+++ b/Aida64Display/Aida64Display/Aida64Display.csproj
@@ -14,6 +14,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Media\button.png" />
+    <None Remove="Media\graphback.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Media\button.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Media\graphback.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.3">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -31,10 +45,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\AidaCommon\Aida64Common.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Media\" />
   </ItemGroup>
 
   <ItemGroup>
