--- a/Aida64Display/Aida64Display/Aida64Display.csproj
+++ b/Aida64Display/Aida64Display/Aida64Display.csproj
@@ -14,20 +14,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Media\button.png" />
-    <None Remove="Media\graphback.png" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <EmbeddedResource Include="Media\button.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Media\graphback.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.3">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -51,5 +37,9 @@
     <EmbeddedResource Update="Views\StartPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Media\" />
   </ItemGroup>
 </Project>
