--- a/Aida64Display/Aida64Display.Android/Aida64Display.Android.csproj
+++ b/Aida64Display/Aida64Display.Android/Aida64Display.Android.csproj
@@ -76,6 +76,12 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Xam.Plugin.Media">
+      <Version>5.0.1</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.CommunityToolkit">
+      <Version>2.0.4</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Essentials">
       <Version>1.7.3</Version>
     </PackageReference>
@@ -85,6 +91,7 @@
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\SaveService.cs" />
     <Compile Include="Services\SignalRService.cs" />
     <Compile Include="TouchEffect.cs" />
   </ItemGroup>
@@ -121,6 +128,9 @@
       <Project>{4024E654-4285-4D78-8E81-645D23CCBC09}</Project>
       <Name>Aida64Display</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\xml\file_paths.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
